--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,9 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+media/
+static/
+db.sqlite3
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
